--- a/LeComCre.Web/LeComCre.Web/MasterForum.master
+++ b/LeComCre.Web/LeComCre.Web/MasterForum.master
@@ -136,9 +136,9 @@
                 <img name="forum_r3_c7" src="images/forum_r3_c7.gif" width="262" height="43" border="0" id="forum_r3_c7"
                     alt="" />
             </td>
-            <td rowspan="2" colspan="10">
-                <img name="forum_r3_c13" src="images/forum_r3_c13.gif" width="509" height="43" border="0" id="forum_r3_c13"
-                    alt="" />
+            <td rowspan="2" colspan="10" style="background-image: url('images/forum_r3_c13.gif'); text-align: right;
+                vertical-align: top;" align="right" valign="top">
+                <asp:Label ID="lblUsuarioLogado" runat="server" Text="" CssClass="td_dados"></asp:Label>
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="28" border="0" alt="" />
