--- a/LeComCre.Web/LeComCre.Web/MasterNegado.master
+++ b/LeComCre.Web/LeComCre.Web/MasterNegado.master
@@ -136,9 +136,9 @@
                 <img name="negado_r3_c7" src="images/negado_r3_c7.gif" width="262" height="43" border="0" id="negado_r3_c7"
                     alt="" />
             </td>
-            <td rowspan="2" colspan="10">
-                <img name="negado_r3_c13" src="images/negado_r3_c13.gif" width="509" height="43" border="0"
-                    id="negado_r3_c13" alt="" />
+            <td rowspan="2" colspan="10" style="background-image: url('images/negado_r3_c13.gif'); text-align: right;
+                vertical-align: top;" align="right" valign="top">
+                <asp:Label ID="lblUsuarioLogado" runat="server" Text="" CssClass="td_dados"></asp:Label>
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="28" border="0" alt="" />
