--- a/LeComCre.Web/LeComCre.Web/MasterLogin.master
+++ b/LeComCre.Web/LeComCre.Web/MasterLogin.master
@@ -177,7 +177,7 @@
                     alt="" />
             </td>
             <td rowspan="4" colspan="2">
-                <a href="Tema.aspx">
+                <a href="Temas.aspx">
                     <img name="login_r5_c13" src="images/login_r5_c13.gif" width="150" height="94" border="0" id="login_r5_c13"
                         alt="Temas Profissionais" /></a>
             </td>
