--- a/LeComCre.Web/LeComCre.Web/MasterAcessebilidade.master
+++ b/LeComCre.Web/LeComCre.Web/MasterAcessebilidade.master
@@ -253,8 +253,8 @@
                     id="login_r9_c4" alt="" />
             </td>
             <td>
-                <img name="login_r9_c8" src="images/login_r9_c8.gif" width="53" height="83" border="0" id="login_r9_c8"
-                    alt="" />
+                <img name="login_r9_c8" src="images/acessibilidade_r9_c8.gif" width="53" height="83" border="0"
+                    id="login_r9_c8" alt="" />
             </td>
             <td colspan="4">
                 <img name="login_r9_c9" src="images/login_r9_c9.gif" width="185" height="83" border="0" id="login_r9_c9"
