--- a/LeComCre.Web/LeComCre.Web/MasterJogos.master
+++ b/LeComCre.Web/LeComCre.Web/MasterJogos.master
@@ -279,7 +279,8 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+            <td colspan="2" style="background-image: url('images/jogos_r10_c1.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="jogos_r10_c1" src="images/jogos_r10_c1.gif" width="46" height="201" border="0" id="jogos_r10_c1"
                     alt="" />
             </td>
@@ -306,7 +307,8 @@
                     </tr>
                 </table>
             </td>
-            <td colspan="2">
+            <td colspan="2" style="background-image: url('images/jogos_r10_c21.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="jogos_r10_c21" src="images/jogos_r10_c21.gif" width="40" height="201" border="0"
                     id="jogos_r10_c21" alt="" />
             </td>
@@ -315,11 +317,13 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+            <td colspan="2" style="background-image: url('images/jogos_r11_c1.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="jogos_r11_c1" src="images/jogos_r11_c1.gif" width="46" height="240" border="0" id="jogos_r11_c1"
                     alt="" />
             </td>
-            <td colspan="2">
+            <td colspan="2" style="background-image: url('images/jogos_r11_c21.gif'); background-repeat: repeat-y;
+                height: auto;">
                 <img name="jogos_r11_c21" src="images/jogos_r11_c21.gif" width="40" height="240" border="0"
                     id="jogos_r11_c21" alt="" />
             </td>
