--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -7,7 +7,14 @@
     <title>..:: Lé Com Cré ::..</title>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7; IE=7" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
+    <meta http-equiv="Content-Language" content="pt-br" />
+    <meta name="country" content="Brazil" />
+    <meta name="keywords" content="Portal Educativo lé com cré LeComCre afonsoft IBTA VERIS TCC Criança" />
+    <meta name="description" content="Portal Educativo Lé Com Cré" />
+    <meta name="title" content="..:: Lé Com Cré ::.." />
+    <meta name="robots" content="all" />
+    <meta name="author" content="Afonso Dutra Nogueira Filho" />
+    <meta name="Email" content="lecomcre@afonsoft.com" />
     <meta name="copyright" content="Lé Com Cré - 2010" />
     <link href="CSS/MasterPage.css" rel="stylesheet" type="text/css" />
     <link href="http://ajax.microsoft.com/ajax/jquery.ui/1.8.5/themes/ui-lightness/jquery-ui.css"
