--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -26,6 +26,9 @@
     </style>
 </head>
 <body>
+    <noscript>
+        <span>Favor habilidar o JavaScript do seu navegador</span>
+    </noscript>
     <form id="form1" runat="server" enctype="multipart/form-data" method="post">
     <asp:ToolkitScriptManager ID="ToolkitScriptManager1" runat="server" AsyncPostBackTimeout="320"
         EnablePartialRendering="true" OnAsyncPostBackError="ToolkitScriptManager1_AsyncPostBackError">
