--- a/LeComCre.Web/LeComCre.Web/MasterNegado.master
+++ b/LeComCre.Web/LeComCre.Web/MasterNegado.master
@@ -109,7 +109,7 @@
                         id="negado_r2_c13" alt="Quem Somos" /></a>
             </td>
             <td colspan="3">
-                <a href="acessebilidade.aspx">
+                <a href="acessibilidade.aspx">
                     <img name="negado_r2_c14" src="images/negado_r2_c14.gif" width="150" height="47" border="0"
                         id="negado_r2_c14" alt="Acessebilidade" /></a>
             </td>
