--- a/LeComCre.Web/LeComCre.Web/MasterColorir.master
+++ b/LeComCre.Web/LeComCre.Web/MasterColorir.master
@@ -109,7 +109,7 @@
                         id="colorir_r2_c13" alt="Quem somos" /></a>
             </td>
             <td colspan="3">
-                <a href="acessebilidade.aspx">
+                <a href="acessibilidade.aspx">
                     <img name="colorir_r2_c14" src="images/colorir_r2_c14.gif" width="150" height="47" border="0"
                         id="colorir_r2_c14" alt="Acessebilidade" /></a>
             </td>
