--- a/LeComCre.Web/LeComCre.Web/MasterQuemSomos.master
+++ b/LeComCre.Web/LeComCre.Web/MasterQuemSomos.master
@@ -109,7 +109,7 @@
                         alt="Quem Somos" /></a>
             </td>
             <td colspan="3">
-                <a href="acessebilidade.aspx">
+                <a href="acessibilidade.aspx">
                     <img name="login_r2_c14" src="images/login_r2_c14.gif" width="150" height="47" border="0" id="login_r2_c14"
                         alt="Acessebilidade" /></a>
             </td>
