--- a/LeComCre.Web/LeComCre.Web/MasterBuscar.master
+++ b/LeComCre.Web/LeComCre.Web/MasterBuscar.master
@@ -110,7 +110,7 @@
             <td colspan="3">
                 <a href="acessibilidade.aspx">
                     <img name="login_r2_c14" src="images/login_r2_c14.gif" width="150" height="47" border="0" id="login_r2_c14"
-                        alt="Acessebilidade" /></a>
+                        alt="acessibilidade" /></a>
             </td>
             <td colspan="3">
                 <a href="Cadastrar.aspx">
