--- a/LeComCre.Web/LeComCre.Web/MasterForum.master
+++ b/LeComCre.Web/LeComCre.Web/MasterForum.master
@@ -111,7 +111,7 @@
             <td colspan="3">
                 <a href="acessibilidade.aspx">
                     <img name="forum_r2_c14" src="images/forum_r2_c14.gif" width="150" height="47" border="0" id="forum_r2_c14"
-                        alt="Acessebilidade" /></a>
+                        alt="acessibilidade" /></a>
             </td>
             <td colspan="3">
                 <a href="Cadastrar.aspx">
