--- a/LeComCre.Web/LeComCre.Web/MasterNegado.master
+++ b/LeComCre.Web/LeComCre.Web/MasterNegado.master
@@ -111,7 +111,7 @@
             <td colspan="3">
                 <a href="acessibilidade.aspx">
                     <img name="negado_r2_c14" src="images/negado_r2_c14.gif" width="150" height="47" border="0"
-                        id="negado_r2_c14" alt="Acessebilidade" /></a>
+                        id="negado_r2_c14" alt="acessibilidade" /></a>
             </td>
             <td colspan="3">
                 <a href="Cadastrar.aspx">
