--- a/LeComCre.Web/LeComCre.Web/MasterBuscar.master
+++ b/LeComCre.Web/LeComCre.Web/MasterBuscar.master
@@ -160,7 +160,7 @@
             <td rowspan="4" colspan="4">
                 <a href="Colorir.aspx">
                     <img name="login_r5_c6" src="images/login_r5_c6.gif" width="146" height="94" border="0" id="login_r5_c6"
-                        alt="Colorir" /></a>
+                        alt="Clique aqui para colorir" /></a>
             </td>
             <td rowspan="4">
                 <img name="login_r5_c10" src="images/login_r5_c10.gif" width="51" height="94" border="0" id="login_r5_c10"
@@ -169,7 +169,7 @@
             <td rowspan="4">
                 <a href="Assuntos.aspx">
                     <img name="login_r5_c11" src="images/login_r5_c11.gif" width="84" height="94" border="0" id="login_r5_c11"
-                        alt="Forum" /></a>
+                        alt="Você profissional, Clique aqui para entrar no forum pedagógico" /></a>
             </td>
             <td rowspan="4">
                 <img name="login_r5_c12" src="images/login_r5_c12.gif" width="30" height="94" border="0" id="login_r5_c12"
@@ -178,7 +178,7 @@
             <td rowspan="4" colspan="2">
                 <a href="Temas.aspx">
                     <img name="login_r5_c13" src="images/login_r5_c13.gif" width="150" height="94" border="0" id="login_r5_c13"
-                        alt="Temas Profissionais" /></a>
+                        alt="Você profissional, clique aqui para encontrar temas para aulas e terapias." /></a>
             </td>
             <td rowspan="4">
                 <img name="login_r5_c15" src="images/login_r5_c15.gif" width="24" height="94" border="0" id="login_r5_c15"
@@ -187,7 +187,7 @@
             <td rowspan="4" colspan="2">
                 <a href="Chat.aspx">
                     <img name="login_r5_c16" src="images/login_r5_c16.gif" width="142" height="94" border="0" id="login_r5_c16"
-                        alt="Batepapo" /></a>
+                        alt=" Clique aqui para entrar no bate-papo." /></a>
             </td>
             <td rowspan="2" colspan="5">
                 <img name="login_r5_c18" src="images/login_r5_c18.gif" width="193" height="27" border="0" id="login_r5_c18"
@@ -205,7 +205,7 @@
             <td rowspan="2" colspan="3">
                 <a href="jogos.aspx">
                     <img name="login_r6_c2" src="images/login_r6_c2.gif" width="126" height="67" border="0" id="login_r6_c2"
-                        alt="Jogos" /></a>
+                        alt="Clique aqui para jogar" /></a>
             </td>
             <td rowspan="3">
                 <img name="login_r6_c5" src="images/login_r6_c5.gif" width="23" height="73" border="0" id="login_r6_c5"
@@ -223,7 +223,7 @@
             <td rowspan="2" colspan="3">
                 <a href="Anuncie.aspx">
                     <img name="login_r7_c19" src="images/login_r7_c19.gif" width="148" height="67" border="0" id="login_r7_c19"
-                        alt="Anuncie" /></a>
+                        alt="Você empresa que deseja divulgar sua marca, clique aqui." /></a>
             </td>
             <td rowspan="2">
                 <img name="login_r7_c22" src="images/login_r7_c22.gif" width="14" height="67" border="0" id="login_r7_c22"
