--- a/LeComCre.Web/LeComCre.Web/MasterColorir.master
+++ b/LeComCre.Web/LeComCre.Web/MasterColorir.master
@@ -9,6 +9,10 @@
     </asp:ContentPlaceHolder>
 </asp:Content>
 <asp:Content ID="Content2" ContentPlaceHolderID="ContentPlaceHolderPortal" runat="server">
+
+    <script type="text/javascript" language="javascript">
+        document.title = "Lé com Cré : Imagens para colorir";
+    </script>
     <table style="display: inline-table;" border="0" cellpadding="0" cellspacing="0" width="1024">
         <tr>
             <td>
@@ -161,7 +165,7 @@
             <td rowspan="4" colspan="4">
                 <a href="Colorir.aspx">
                     <img name="colorir_r5_c6" src="images/colorir_r5_c6.gif" width="146" height="94" border="0"
-                        id="colorir_r5_c6" alt="Colorir" /></a>
+                        id="colorir_r5_c6" alt="Clique aqui para colorir" /></a>
             </td>
             <td rowspan="4">
                 <img name="colorir_r5_c10" src="images/colorir_r5_c10.gif" width="51" height="94" border="0"
@@ -170,7 +174,7 @@
             <td rowspan="4">
                 <a href="Assuntos.aspx">
                     <img name="colorir_r5_c11" src="images/colorir_r5_c11.gif" width="84" height="94" border="0"
-                        id="colorir_r5_c11" alt="Forum" /></a>
+                        id="colorir_r5_c11" alt="Você profissional, Clique aqui para entrar no forum pedagógico" /></a>
             </td>
             <td rowspan="4">
                 <img name="colorir_r5_c12" src="images/colorir_r5_c12.gif" width="30" height="94" border="0"
@@ -188,7 +192,7 @@
             <td rowspan="4" colspan="2">
                 <a href="Chat.aspx">
                     <img name="colorir_r5_c16" src="images/colorir_r5_c16.gif" width="142" height="94" border="0"
-                        id="colorir_r5_c16" alt="Batepapo" /></a>
+                        id="colorir_r5_c16" alt=" Clique aqui para entrar no bate-papo." /></a>
             </td>
             <td rowspan="2" colspan="5">
                 <img name="colorir_r5_c18" src="images/colorir_r5_c18.gif" width="193" height="27" border="0"
@@ -206,7 +210,7 @@
             <td rowspan="2" colspan="3">
                 <a href="jogos.aspx">
                     <img name="colorir_r6_c2" src="images/colorir_r6_c2.gif" width="126" height="67" border="0"
-                        id="colorir_r6_c2" alt="Jogos" /></a>
+                        id="colorir_r6_c2" alt="Clique aqui para jogar" /></a>
             </td>
             <td rowspan="3">
                 <img name="colorir_r6_c5" src="images/colorir_r6_c5.gif" width="23" height="73" border="0"
@@ -224,7 +228,7 @@
             <td rowspan="2" colspan="3">
                 <a href="Anuncie.aspx">
                     <img name="colorir_r7_c19" src="images/colorir_r7_c19.gif" width="148" height="67" border="0"
-                        id="colorir_r7_c19" alt="Anuncie" /></a>
+                        id="colorir_r7_c19" alt="Você empresa que deseja divulgar sua marca, clique aqui." /></a>
             </td>
             <td rowspan="2">
                 <img name="colorir_r7_c22" src="images/colorir_r7_c22.gif" width="14" height="67" border="0"
